After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 641488 - CRITICAL **: bluetooth_verify_address: assertion `bdaddr != NULL' failed
CRITICAL **: bluetooth_verify_address: assertion `bdaddr != NULL' failed
Status: RESOLVED FIXED
Product: gnome-bluetooth
Classification: Core
Component: general
unspecified
Other Linux
: Normal trivial
: ---
Assigned To: gnome-bluetooth-general-maint@gnome.bugs
gnome-bluetooth-general-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2011-02-04 13:27 UTC by Daniele Forsi
Modified: 2011-02-06 23:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Check for NULL before calling bluetooth_verify_address() (1.18 KB, patch)
2011-02-04 15:06 UTC, Daniele Forsi
committed Details | Review

Description Daniele Forsi 2011-02-04 13:27:15 UTC
A NULL value is valid for the "device" property but the call to bluetooth_verify_address() is done before the check for NULL and it fails because NULL isn't a valid address so a critical message is logged to the console.
Comment 1 Daniele Forsi 2011-02-04 15:06:56 UTC
Created attachment 180086 [details] [review]
Check for NULL before calling bluetooth_verify_address()