Don't log a critical message when device address is NULL

Reverse the order of the checks because a NULL value is valid for
the "device" property but not valid for bluetooth_verify_address().
Avoids printing the message:
CRITICAL **: bluetooth_verify_address: assertion `bdaddr != NULL' failed

https://bugzilla.gnome.org/show_bug.cgi?id=641488